# cbh-modimedio

./: .env.example  .gitignore  DEPLOY_SERVIDOR.md  README.md  ftp_client.py  limites.py  loader.py  painel.py  parser.py  pyproject.toml  requirements.txt  stations.py  tempo.py
.streamlit/: config.toml  secrets.toml.example
SHP/: MODIMEDIO UMRs.dbf  MODIMEDIO UMRs.qmd  MODIMEDIO UMRs.shp  MODIMEDIO UMRs.shx  RH_III.dbf  RH_III.prj  RH_III.shp  RH_III.shx
